customer-service/k8s/customer/customer-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: customer-service
  namespace: banking

spec:
  selector:
    app: customer-service

  ports:
    - name: https
      port: 80
      targetPort: 8082
      protocol: TCP

  type: ClusterIP
